--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -4,7 +4,7 @@
   }
   
   .NavBar-title {
-    color: var(--white);
+    color: var(--black);
     font-size: 20px;
   }
   
@@ -14,7 +14,7 @@
   
   .NavBar-link,
   .NavBar-link:visited {
-    color: var(--white);
+    color: var(--black);
     opacity: 0.6;
     text-decoration: none;
   }
