--- a/client/src/components/modules/home.css
+++ b/client/src/components/modules/home.css
@@ -3,7 +3,7 @@
 }
 
 .home-background {
-    background-image: url("../../images/");
+    background-image: url("../../images/party01.jpg");
     background-position: 100% 0;
     background-repeat: no-repeat;
     background-size: 100vw;
