home css and export

--- a/client/src/components/modules/home.css
+++ b/client/src/components/modules/home.css
@@ -8,3 +8,24 @@
     background-repeat: no-repeat;
     background-size: 100vw;
 }
+
+.home-bodycontainer {
+
+}
+
+.home-title {
+
+}
+
+.home-subtitle {
+
+}
+
+.home-buttoncontainer {
+
+}
+
+.home-button {
+    
+}
+
