--- a/client/src/components/modules/home.css
+++ b/client/src/components/modules/home.css
@@ -1,7 +1,3 @@
-.home {
-
-}
-
 .home-background {
     background-image: url("../../images/party01.jpg");
     background-position: 100% 0;
@@ -10,22 +6,29 @@
 }
 
 .home-bodycontainer {
-
+    align-content: center;
+    margin-top: 150px;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
 }
 
 .home-title {
-
+    font-size: 64px;
+    text-align: center;
+    color: #FFFFFF;
 }
 
 .home-subtitle {
-
+    font-size: 48px;
+    text-align: center;
 }
 
 .home-buttoncontainer {
-
+    /* todo: position button */
 }
 
 .home-button {
-    
+    /* todo: style button */
 }
 
