Height and Width of Containers, Background for home

--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -1,6 +1,7 @@
 .NavBar-container {
     padding: var(--s) var(--m);
     background-color: var(--primary);
+    height: 6vh;
   }
   
   .NavBar-title {
