--- a/client/src/components/modules/home.css
+++ b/client/src/components/modules/home.css
@@ -1,14 +1,17 @@
-.home-background {
-    background-image: url("../../images/party01.jpg");
+.home-container {
+    height: 91.7vh;
+    width: 100%;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url("../../images/party01.jpg");
+    background-repeat: no-repeat; 
     background-position: 100% 0;
-    background-repeat: no-repeat;
     background-size: 100vw;
 }
 
 .home-bodycontainer {
+    position: relative;
+    top: 30vh;
     align-content: center;
-    margin-top: 30vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -17,12 +20,14 @@
     font-size: 64px;
     text-align: center;
     margin: 5px;
+    color: #FFFFFF;
 }
 
 .home-subtitle {
     font-size: 48px;
     text-align: center;
     margin: 5px;
+    color: #FFFFFF;
 }
 
 .home-buttoncontainer {
