--- a/client/src/components/modules/home.css
+++ b/client/src/components/modules/home.css
@@ -31,10 +31,30 @@
 }
 
 .home-buttoncontainer {
-    /* todo: position button */
+    position: relative;
+    margin: 5vh;
+    align-content: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    color: white;
 }
 
-.home-button {
+.home-button1 .home-button2 {
     /* todo: style button */
+    display: inline-block;
+    padding: 2.5vh;
+    align-content: center;
+    color: white;
+}
+
+.home-button1 {
+    /* todo: style button */
+    background-color: white;
+}
+
+.home-button2 {
+    /* todo: style button */
+    background-color: var(--primary);
 }
 
