popups look nicer

--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -20,7 +20,7 @@
 :root {
   --primary: #FFF7AE;
   --primary--dim: #FEFFF1;
-  --darkgrey: #d4d4d4;
+  --darkgrey: #a1a1a1;
   --medgrey: #e0e0e0;
   --grey: #f7f7f7;
   --white: #fff;
