--- a/client/src/components/modules/Map.css
+++ b/client/src/components/modules/Map.css
@@ -10,5 +10,18 @@
 }
 
 .mapboxgl-popup-content {
-  width: 180px;
+  width: 280px;
+  border-style: solid;
+  border-width: 5px;
+  border-color: var(--red);
+  padding-top: 0;
+}
+
+.mapboxgl-popup-content h2 {
+  font-size: var(--m);
+}
+
+.mapboxgl-popup-content h3 {
+  font-size: var(--L);
+  color: var(--darkgrey)
 }
