--- a/client/src/components/modules/Card.css
+++ b/client/src/components/modules/Card.css
@@ -7,7 +7,7 @@
 
 .tooltip {
     position: relative;
-    display: inline-block;
+    /* display: inline-block; */
     border-bottom: 1px dotted black;
 }
 
