--- a/client/src/components/pages/Profile.css
+++ b/client/src/components/pages/Profile.css
@@ -15,6 +15,10 @@
     margin: 0px;
 }
 
+/* .profile-left-personale {
+    position: relative;
+} */
+
 .profile-left-names {
     padding-top: 0;
     padding-bottom: 0
@@ -25,6 +29,11 @@
     top: 24px;
     padding-top: 0;
     padding-bottom: 0
+}
+
+.profile-left-boxes {
+    position: relative;
+    top: 48px;
 }
 
 .profile-right {
