--- a/client/src/components/modules/Map.css
+++ b/client/src/components/modules/Map.css
@@ -1,3 +1,12 @@
+body {
+  overflow: hidden;
+}
+
+.map {
+  position: fixed;
+  z-index: 0;
+}
+
 .marker-btn {
   background: none;
   border: none;
@@ -24,4 +33,28 @@
 .mapboxgl-popup-content h3 {
   font-size: var(--L);
   color: var(--darkgrey)
+}
+
+.virtual-btn {
+  position: fixed;
+  right: 50px;
+  top: 100px;
+  background: var(--red);
+  opacity: 0.8;
+  border-radius: 25px;
+  padding: 5px;
+  z-index: 1;
+}
+
+.virtual-btn:hover {
+  opacity: 1;
+}
+
+.overlay {
+  position: absolute;
+  width: 30vw;
+  height: 100vh;
+  /* right: 0; */
+  background-color: var(--red);
+  z-index: -1;
 }
